...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout" />


        <!--        <Button-->
<!--            android:id="@+id/sign_up_btn"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:layout_marginLeft="32dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="32dp"-->
...
<!--            android:fontFamily="sans-serif-medium"-->
<!--            android:text="Next"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@android:color/white"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/date_picker2" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
