...
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">***</string>
    <string name="twitter_consumer_secret" translatable="false">***</string>
    <string name="continue_with_twitter">Continue with Twitter</string>


    <string name="user_too_young">You are too young to have an account. Thanks for trying.</string>
    <string name="enter_valid_year">Enter a valid year to proceed.</string>

    <string name="account_needed_to_record_video">Kindly sign up or log in to record a video</string>

    <string name="enter_valid_email">Kindly enter a valid email address to proceed</string>
    <string name="video_description_needed">Kindly add a video description to proceed</string>
    <string name="all_permissions_granted">All permissions granted.</string>
...
